@@ -53,6 +53,8 @@ function Invoke-FinGrindBundleLauncher {
 
     $javaArguments = @(
         "--enable-native-access=dev.erst.fingrind.cli",
+        "--add-opens=java.base/java.nio=dev.erst.fingrind.cli",
+        "--add-exports=java.base/sun.nio=dev.erst.fingrind.cli",
         "-D{{sqliteBundleHomeSystemProperty}}=$appHome",
         "-Dfingrind.runtime.distribution={{bundleRuntimeDistribution}}",
         "-Dfingrind.runtime.bundle-target={{bundleClassifier}}",
